# rust_clean_code_product

./: .env  .gitignore  Cargo.toml  Makefile  README.md
app/: .env  Cargo.toml
app/src/: lib.rs  main.rs  state.rs
app/src/application/: add_product.rs  mod.rs  openapi.rs  router.rs
app/src/domain/: mod.rs  repository.rs
app/src/domain/model/: mod.rs  product.rs  value_object.rs
app/src/domain/use_case/: add_product.rs
app/src/infrastructure/: mod.rs  model.rs  postgres_repository.rs
config/: Cargo.toml
config/src/: lib.rs
error/: Cargo.toml
error/src/: lib.rs
sql/: database.sql
