[workspace]
members = [
    "app",
    "error",
    "config"
]

[workspace.dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.3"
chrono = { version = "0.4.25", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.2", features = ["sync"]}
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
derive_more = "0.99.17"
utoipa = {version = "3.3.0", features = ["actix_extras", "uuid", "chrono"]}
utoipa-swagger-ui = {version = "3.1.3", features = ["actix-web"]}
mime = "0.3"
async-trait = "0.1.68"
thiserror = "1.0.40"
tracing = "0.1.37"
once_cell = "1.17.1"