[package]
name = "crud_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {workspace = true}
actix-cors = {workspace = true}
error = {path = "../error"}
config = {path = "../config"}
validator =  {workspace = true}
lazy_static =  {workspace = true}
regex =  {workspace = true}
chrono =  {workspace = true}
dotenv =  {workspace = true}
env_logger =  {workspace = true}
serde =  {workspace = true}
serde_json =  {workspace = true}
tokio = {workspace = true}
argon2 =  {workspace = true}
jsonwebtoken = {workspace = true}
rand_core =  {workspace = true}
sqlx =  {workspace = true}
uuid =  {workspace = true}
derive_more = {workspace = true}
utoipa =  {workspace = true}
utoipa-swagger-ui =  {workspace = true}
mime = {workspace = true}
async-trait = {workspace = true}
tracing={workspace = true}
once_cell = {workspace=true}